src/istio/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: simple-nginx
spec:
    selector:
        app: simple-nginx
    ports:
        - name: http-tcp
          protocol: TCP
          port: 80
          targetPort: 80
