src/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
    name: simple-nginx
spec:
    host: simple-nginx
    subsets:
        - name: v1
          labels:
              app: simple-nginx
              version: v1
        - name: v2
          labels:
              app: simple-nginx
              version: v2
